tests/fixtures/compile-errors/register-invalid-parameter/input.ts
import { register } from "../../../../dist/typecheck.macro";
register(42);
